Second component completed

--- a/Navbar/Searchbar/index.html
+++ b/Navbar/Searchbar/index.html
@@ -12,6 +12,7 @@
         <input type="text" placeholder="Search">
         <i class='bx bx-search' style='color:#ffffff'></i>
         <p>Search</p>
+        <i class='bx bxs-microphone'></i>
     </div>
 </body>
 </html>
