--- a/Navbar/Searchbar/index.html
+++ b/Navbar/Searchbar/index.html
@@ -11,7 +11,7 @@
     <div class="search-mic">
         <input type="text" placeholder="Search">
         <i class='bx bx-search' style='color:#ffffff'></i>
-        <p>Search</p>
+        <p class="search">Search</p>
         <i class='bx bxs-microphone'></i>
     </div>
 </body>
