--- a/Image Card/index.html
+++ b/Image Card/index.html
@@ -444,7 +444,7 @@
                 </div> <!--icon-->
             </div> <!--context-->
         </div> <!--imagecard-->
-        
+
         <div class="image-card">
             <div class="image-duration">
                 <img src="Images/eniesLobbyPose1.jpg" alt="Ennies Lobby Pose">
@@ -457,7 +457,7 @@
                 </div> <!--small-image-->
     
                 <div class="info">
-                    <p class="image-name">Cipher Pol vs The Strawhats | ONE PIECE</p>
+                    <p class="image-name">Cipher Pol vs The Strawhatsd | ONE PIECE</p>
                     <p class="channel-name">Roronoa Zoro</p>
                     <p class="views-days">10M views &middot 7 years ago</p>
                 </div> <!--info-->
