New Section Completed

--- a/Image Card/index.html
+++ b/Image Card/index.html
@@ -457,7 +457,7 @@
                 </div> <!--small-image-->
     
                 <div class="info">
-                    <p class="image-name">Cipher Pol vs The Strawhatsd | ONE PIECE</p>
+                    <p class="image-name">Cipher Pol vs The Strawhats | ONE PIECE</p>
                     <p class="channel-name">Roronoa Zoro</p>
                     <p class="views-days">10M views &middot 7 years ago</p>
                 </div> <!--info-->
