Updated the section

--- a/Navbar/Logo and Title/index.html
+++ b/Navbar/Logo and Title/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logo and <Title></Title></title>
+    <title>Logo and <Title></Title>
+    </title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="logo-title">
+        <div class="sidebar-icon">
+            <svg xmlns="http://www.  w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false"
+                aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+                <!-- Background -->
+                <rect width="100%" height="100%" fill="black"></rect>
+                <!-- Icon Path -->
+                <path d="M21 6H3V5h18v1zm0 5H3v1h18v-1zm0 6H3v1h18v-1z" fill="white"></path>
+            </svg>
+        </div> <!--sidebar-icon-->
+
         <a href="https://www.youtube.com/"><img src="clear_youtube_logo (1).png" alt="Youtube logo and Title"></a>
     </div>
 </body>
+
 </html>
