--- a/Navbar/Sidebar/index.html
+++ b/Navbar/Sidebar/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <div class="sidebar">
-        <div class="sidebar-icon">
-            <svg xmlns="http://www.  w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false"
-                aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+        <!-- <div class="sidebar-icon"> -->
+            <!-- <svg xmlns="http://www.  w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" -->
+                <!-- aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"> -->
                 <!-- Background -->
-                <rect width="100%" height="100%" fill="black"></rect>
+                <!-- <rect width="100%" height="100%" fill="black"></rect> -->
                 <!-- Icon Path -->
-                <path d="M21 6H3V5h18v1zm0 5H3v1h18v-1zm0 6H3v1h18v-1z" fill="white"></path>
-            </svg>
-        </div> <!--sidebar-icon-->
+                <!-- <path d="M21 6H3V5h18v1zm0 5H3v1h18v-1zm0 6H3v1h18v-1z" fill="white"></path> -->
+            <!-- </svg> -->
+        <!-- </div> sidebar-icon -->
 
         <div class="options">
             <div class="home-shorts-subs">
