Profile card Completed

--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="github-linkedin">
-            <a href="https://github.com/Tejas8075" class="github-link"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/Tejas8075" class="github-link"><i class='bx bxl-github' style='color:#551a8b'  ></i></a>
 
             <a href="https://www.linkedin.com/in/tejas-mahangade-58a389211?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin-link"><i class='bx bxl-linkedin-square' style='color:#1d7cdc'  ></i></a>
         </div>
