Half Section done

--- a/Product Page/index.html
+++ b/Product Page/index.html
@@ -53,7 +53,89 @@
             </div>
         </header>
 
+        <main>
+            <section class="left-side">
+                <div class="top-context">
+                    <div class="context-left-side">
+                        <img src="Images/L shaped Sofa main Image.jpg" alt="Sofa" class="main-image">
+                    </div> <!--context-left-side-->
 
+                    <div class="context-right-side">
+                        <div class="side-images">
+                            <img src="Images/L-shaped sofa pic 1.jpg" alt="Image 1" class="grow-image">
+                        </div> <!--side-images-->
+
+                        <div class="side-images">
+                            <img src="Images/L-shaped Sofa pic 2.jpg" alt="Image 2" class="grow-image">
+                        </div> <!--side-images-->
+
+                        <div class="side-images">
+                            <img src="Images/L-shaped Sofa pic 3.jpg" alt="Image 3" class="grow-image">
+                        </div> <!--side-images-->
+
+                        <div class="side-images">
+                            <img src="Images/Measurements.jpg" alt="Image 4" class="grow-image">
+                        </div> <!--side-images-->
+                    </div> <!--context-right-side-->
+                </div> <!--top-context-->
+
+                <div class="bottom-context">
+                    <div class="bottom-title-icons">
+                        <p class="title">Recently viewed</p>
+
+                        <div class="icons">
+                            <i class='bx bx-chevron-left' style='color:#a39595'  ></i>
+
+                            <i class='bx bx-chevron-right' style='color:#171414'  ></i>
+                        </div> <!--icons-->
+                    </div> <!--bottom-title-icons-->
+
+                    <div class="bottom-images-name-price">
+                        <div class="image-name-price">
+                            <div class="image">
+                                <img class="chair" src="Images/Red Chair.jpg" alt="Chair-1">
+                            </div> <!--image-->
+
+                            <div class="proname-proprice">
+                                <p class="proname">Lottie</p>
+                                <p class="proprice">$250.99</p>
+                            </div> <!--proname-proprice-->
+                        </div> <!--image-name-price-->
+
+                        <div class="image-name-price">
+                            <div class="image">
+                                <img class="chair" src="Images/Green Chair.jpg" alt="Chair-2">
+                            </div> <!--image-->
+
+                            <div class="proname-proprice">
+                                <p class="proname">Promesa</p>
+                                <p class="proprice">$320.99</p>
+                            </div> <!--proname-proprice-->
+                        </div> <!--image-name-price-->
+
+                        <div class="image-name-price">
+                            <div class="image">
+                                <img class="chair" src="Images/Blue chair.jpg" alt="Chair-3">
+                            </div> <!--image-->
+
+                            <div class="proname-proprice">
+                                <p class="proname">Lottie</p>
+                                <p class="proprice">$243.99</p>
+                            </div> <!--proname-proprice-->
+                        </div> <!--image-name-price-->
+                    </div> <!--bottom-images-name-price"-->
+                </div> <!--bottom-context-->
+
+            </section> <!--left-side-->
+
+            <section class="middle-side">
+                
+            </section> <!--middle-side-->
+
+            <section class="right-side">
+
+            </section> <!--right-side-->
+        </main>
     </div>
 </body>
 
