Static part done

--- a/Product Page/index.html
+++ b/Product Page/index.html
@@ -45,7 +45,7 @@
 
                 <div class="cart">
                     <i class='bx bx-shopping-bag'></i>
-                    
+
                     <p class="cart-name">Cart</p>
                     <p class="super">9+</p>
 
@@ -62,7 +62,7 @@
 
                     <div class="context-right-side">
                         <div class="side-images">
-                            <img src="Images/L-shaped sofa pic 1.jpg" alt="Image 1" class="grow-image">
+                            <img src="Images/L-shaped sofa pic 1.jpg" alt="Image 1" class="grow-image image-1">
                         </div> <!--side-images-->
 
                         <div class="side-images">
@@ -83,17 +83,17 @@
                     <div class="bottom-title-icons">
                         <p class="title">Recently viewed</p>
 
-                        <div class="icons">
-                            <i class='bx bx-chevron-left' style='color:#a39595'  ></i>
+                        <div class="for-back-icons">
+                            <i class='bx bx-chevron-left' style='color:#a39595'></i>
 
-                            <i class='bx bx-chevron-right' style='color:#171414'  ></i>
-                        </div> <!--icons-->
+                            <i class='bx bx-chevron-right' style='color:#171414'></i>
+                        </div> <!--for-back-icons-->
                     </div> <!--bottom-title-icons-->
 
                     <div class="bottom-images-name-price">
                         <div class="image-name-price">
                             <div class="image">
-                                <img class="chair" src="Images/Red Chair.jpg" alt="Chair-1">
+                                <img class="chair-1" src="Images/Red Chair.jpg" alt="Chair-1">
                             </div> <!--image-->
 
                             <div class="proname-proprice">
@@ -104,7 +104,7 @@
 
                         <div class="image-name-price">
                             <div class="image">
-                                <img class="chair" src="Images/Green Chair.jpg" alt="Chair-2">
+                                <img class="chair-1" src="Images/Green Chair.jpg" alt="Chair-2">
                             </div> <!--image-->
 
                             <div class="proname-proprice">
@@ -115,7 +115,7 @@
 
                         <div class="image-name-price">
                             <div class="image">
-                                <img class="chair" src="Images/Blue chair.jpg" alt="Chair-3">
+                                <img class="chair-1 new-chair" src="Images/Blue chair.jpg" alt="Chair-3">
                             </div> <!--image-->
 
                             <div class="proname-proprice">
@@ -129,13 +129,68 @@
             </section> <!--left-side-->
 
             <section class="middle-side">
-                
+
             </section> <!--middle-side-->
 
             <section class="right-side">
+                <div class="product-name-desc-price">
+                    <div class="heart">
+                        <h1 class="product-name">llana</h1>
+                        <i class='bx bx-heart heart-icon'></i>
+                    </div> <!--heart-->
 
+                    <p class="product-desc">A sectional or an L-shaped sofa can make a great addition to your living
+                        room based on your
+                        needs.</p>
+                    <h1 class="product-price">$ 430.99</h1>
+                </div> <!--product-name-desc-price-->
+
+                <div class="rating-reviews">
+                    <div class="rating-icons">
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star'></i>
+                        <i class='bx bxs-star-half' style='color:#1e1d1d'></i>
+                    </div> <!--rating-icons-->
+
+                    <div class="review">
+                        <p class="review-info">441 reviews</p>
+                    </div> <!--review-->
+                </div> <!--rating-reviews-->
+
+                <div class="colors">
+                    <p class="color-name">Colour</p>
+                        <i class='bx bxs-circle' style='color:#e7893b'></i>
+                        <i class='bx bxs-circle' style='color:#b1a8a0'></i>
+                        <i class='bx bxs-circle' style='color:#6a8890'></i>
+                        <i class='bx bxs-circle' style='color:#5c6952'></i>
+                        <i class='bx bxs-circle' style='color:#1f244a'></i>
+                </div> <!--colors-->
+
+                <div class="btns">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add to cart</button>
+                </div> <!--btns-->
+
+                <div class="dis-info-ques">
+                    <div class="dispatch">
+                        <p class="dispatch-info">Dispatched in 5 -7 weeks</p>
+                        <i class='bx bx-chevron-right right-arrow' style='color:#171414'></i>
+                    </div>
+                    <a href="#" class="question">Why the longer lead time?</a>
+                </div> <!--dis-info-ques-->
+
+                <div class="delivery">
+                    <p class="delivery-price-info">Home Delivery - $10</p>
+                </div>
             </section> <!--right-side-->
         </main>
+
+        <footer>
+            <i class='bx bxs-circle-half bx-rotate-270' style='color:#0c0c0d'></i>
+            <i class='bx bx-search' style='color:#fff'></i>
+        </footer>
     </div>
 </body>
 
