--- a/Product Page/index.html
+++ b/Product Page/index.html
@@ -187,10 +187,10 @@
             </section> <!--right-side-->
         </main>
 
-        <footer>
+        <!-- <footer>
             <i class='bx bxs-circle-half bx-rotate-270' style='color:#0c0c0d'></i>
             <i class='bx bx-search' style='color:#fff'></i>
-        </footer>
+        </footer> -->
     </div>
 </body>
 
